# restaurant-order-system

./: .gitignore  README.md  restaurant.db
backend/: CMakeLists.txt  config.cpp  config.h  main.cpp  restaurant.db
backend/controllers/: AdminController.cpp  AdminController.h  AuthController.cpp  AuthController.h  MenuController.cpp  MenuController.h  OrderController.cpp  OrderController.h
backend/database/: Database.cpp  Database.h
backend/models/: Dish.h  Merchant.h  Order.h  Session.h  User.h
backend/services/: AuthService.cpp  AuthService.h  MenuService.cpp  MenuService.h  OrderService.cpp  OrderService.h
db/: init_data.sql  schema.sql
desktop/merchant-app/: README.md  package.json
desktop/merchant-app/src/: main.js
desktop/user-app/: README.md  package.json
docs/: desktop-app-plan.md
frontend/: app.py  config.py  requirements.txt  start_with_backend.py  test_backend.py
frontend/routes/: admin_routes.py  auth_routes.py  cart_routes.py  menu_routes.py  order_routes.py
frontend/services/: api_client.py
frontend/static/: styles.css
frontend/templates/: admin.html  auth_user_login.html  auth_user_register.html  base.html  cart.html  menu.html  order_status.html  profile.html
frontend_merchant/: app.py  config.py  start_with_backend.py
frontend_merchant/routes/: admin_routes.py  auth_routes.py
frontend_merchant/services/: api_client.py
frontend_merchant/static/: styles.css
frontend_merchant/templates/: admin.html  admin_menu.html  auth_merchant_login.html  auth_merchant_register.html  base.html
scripts/: create_db.py
(+1 files in other folders)
